--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <button type="button" class="btn navbar-toggler">Menu</button>
             <ul class="nav_links_wrapper">
               <li>
-                <a href="list-view.html" class="nav-link">Manga Online</a>
+                <a href="index.html" class="nav-link">Manga Online</a>
               </li>
               <li>
-                <a href="list-view.html" class="nav-link">Latest Manga</a>
+                <a href="latest-manga.html" class="nav-link">Latest Manga</a>
               </li>
-              <li><a href="list-view.html" class="nav-link">Hot Manga</a></li>
+              <li><a href="hot-manga.html" class="nav-link">Hot Manga</a></li>
               <li>
-                <a href="list-view.html" class="nav-link">Newest Manga</a>
+                <a href="new-manga.html" class="nav-link">Newest Manga</a>
               </li>
             </ul>
           </div>
