--- a/bookmark.html
+++ b/bookmark.html
@@ -64,7 +64,7 @@
               <li>
                 <a href="latest-manga.html" class="nav-link">Latest Manga</a>
               </li>
-              <li><a href="hot-manga.html" class="nav-link">Hot Manga</a></li>
+              <li><a href="top-manga.html" class="nav-link">Hot Manga</a></li>
               <li>
                 <a href="new-manga.html" class="nav-link">Newest Manga</a>
               </li>
@@ -442,41 +442,41 @@
                 <div class="section_content">
                   <ul class="genres_list border-bottom">
                     <li class="list_item active">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=latest">
                         Latest
                       </a>
                     </li>
                     <li class="list_item">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=newest">
                         Newest
                       </a>
                     </li>
                     <li class="list_item">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=top-view">
                         Top View
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list border-bottom">
-                    <li class="list_item active">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_all">
+                      <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
-                    <li class="list_item">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_completed">
+                      <a href="list-view.html?status=completed">
                         Completed
                       </a>
                     </li>
-                    <li class="list_item">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_ongoing">
+                      <a href="list-view.html?status=ongoing">
                         Ongoing
                       </a>
                     </li>
                   </ul>
-                  <ul class="genres_list">
-                    <li class="list_item active">
-                      <a href="javascript:void(0)">
+                  <ul class="genres_list"  id="genres_list_container">
+                    <li class="list_item" id="status_all">
+                      <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
