--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li>
                 <a href="latest-manga.html" class="nav-link">Latest Manga</a>
               </li>
-              <li><a href="hot-manga.html" class="nav-link">Hot Manga</a></li>
+              <li><a href="top-manga.html" class="nav-link">Hot Manga</a></li>
               <li>
                 <a href="new-manga.html" class="nav-link">Newest Manga</a>
               </li>
@@ -401,9 +401,12 @@
                   </div> -->
                 </div>
                 <div class="listing_panel_footer">
-                  <button type="button" id="loadMore" class="footer_link">
+                  <a href="/list-view.html?sort=latest" id="loadMore" class="footer_link">
                     << MORE>>
-                      </a>
+                  </a>
+                  <!-- <a href="latest-manga.html" id="loadMore" class="footer_link">
+                    << MORE>>
+                  </a> -->
                 </div>
               </div>
             </div>
@@ -444,7 +447,7 @@
                 <div class="section_footer">
                   <button type="button" class="footer_link">
                     << MORE>>
-                      </a>
+                  </button>
                 </div>
               </section>
               <section class="genres_section">
@@ -456,41 +459,41 @@
                 <div class="section_content">
                   <ul class="genres_list border-bottom">
                     <li class="list_item active">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=latest">
                         Latest
                       </a>
                     </li>
                     <li class="list_item">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=newest">
                         Newest
                       </a>
                     </li>
                     <li class="list_item">
-                      <a href="javascript:void(0)">
+                      <a href="/list-view.html?sort=top-view">
                         Top View
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list border-bottom">
-                    <li class="list_item active">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_all">
+                      <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
-                    <li class="list_item">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_completed">
+                      <a href="list-view.html?status=completed">
                         Completed
                       </a>
                     </li>
-                    <li class="list_item">
-                      <a href="javascript:void(0)">
+                    <li class="list_item" id="status_ongoing">
+                      <a href="list-view.html?status=ongoing">
                         Ongoing
                       </a>
                     </li>
                   </ul>
-                  <ul class="genres_list">
-                    <li class="list_item active">
-                      <a href="javascript:void(0)">
+                  <ul class="genres_list"  id="genres_list_container">
+                    <li class="list_item" id="status_all">
+                      <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
@@ -876,7 +879,7 @@
     //   });
     // }
 
-    document.getElementById("loadMore").addEventListener("click", fetchLatestManga);
+    // document.getElementById("loadMore").addEventListener("click", fetchLatestManga);
 
     fetchLatestManga();
   </script>
