--- a/index.html
+++ b/index.html
@@ -458,41 +458,41 @@
                 </div>
                 <div class="section_content">
                   <ul class="genres_list border-bottom">
-                    <li class="list_item active">
+                    <li class="list_item sort_latest" id="sort_latest">
                       <a href="/list-view.html?sort=latest">
                         Latest
                       </a>
                     </li>
-                    <li class="list_item">
+                    <li class="list_item sort_newest" id="sort_newest">
                       <a href="/list-view.html?sort=newest">
                         Newest
                       </a>
                     </li>
-                    <li class="list_item">
+                    <li class="list_item sort_top-view" id="sort_top-view">
                       <a href="/list-view.html?sort=top-view">
                         Top View
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list border-bottom">
-                    <li class="list_item" id="status_all">
+                    <li class="list_item status_all" id="status_all">
                       <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
-                    <li class="list_item" id="status_completed">
+                    <li class="list_item status_completed" id="status_completed">
                       <a href="list-view.html?status=completed">
                         Completed
                       </a>
                     </li>
-                    <li class="list_item" id="status_ongoing">
+                    <li class="list_item status_ongoing" id="status_ongoing">
                       <a href="list-view.html?status=ongoing">
                         Ongoing
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list"  id="genres_list_container">
-                    <li class="list_item" id="status_all">
+                    <li class="list_item status_all" id="status_all">
                       <a href="list-view.html?status=all">
                         ALL
                       </a>
