--- a/detail-view.html
+++ b/detail-view.html
@@ -341,7 +341,7 @@
                       <a href="javascript:void(0)">Read Manga Online</a>
                     </div>
                     <div class="breadcrumb_item">
-                      <a href="javascript:void(0)">The Possessed Genius’ Gaming Stream</a>
+                      <a href="javascript:void(0)" id="breadcrumb_manga_title">The Possessed Genius’ Gaming Stream</a>
                     </div>
                   </div>
                 </div>
@@ -533,41 +533,41 @@
                 </div>
                 <div class="section_content">
                   <ul class="genres_list border-bottom">
-                    <li class="list_item active">
+                    <li class="list_item sort_latest" id="sort_latest">
                       <a href="/list-view.html?sort=latest">
                         Latest
                       </a>
                     </li>
-                    <li class="list_item">
+                    <li class="list_item sort_newest" id="sort_newest">
                       <a href="/list-view.html?sort=newest">
                         Newest
                       </a>
                     </li>
-                    <li class="list_item">
+                    <li class="list_item sort_top-view" id="sort_top-view">
                       <a href="/list-view.html?sort=top-view">
                         Top View
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list border-bottom">
-                    <li class="list_item" id="status_all">
+                    <li class="list_item status_all" id="status_all">
                       <a href="list-view.html?status=all">
                         ALL
                       </a>
                     </li>
-                    <li class="list_item" id="status_completed">
+                    <li class="list_item status_completed" id="status_completed">
                       <a href="list-view.html?status=completed">
                         Completed
                       </a>
                     </li>
-                    <li class="list_item" id="status_ongoing">
+                    <li class="list_item status_ongoing" id="status_ongoing">
                       <a href="list-view.html?status=ongoing">
                         Ongoing
                       </a>
                     </li>
                   </ul>
                   <ul class="genres_list"  id="genres_list_container">
-                    <li class="list_item" id="status_all">
+                    <li class="list_item status_all" id="status_all">
                       <a href="list-view.html?status=all">
                         ALL
                       </a>
@@ -847,6 +847,7 @@
 
         document.getElementById("manga-cover").src = manga.cover || "placeholder.jpg";
         document.getElementById("manga-title").textContent = manga.title || "Unknown Title";
+        document.getElementById("breadcrumb_manga_title").textContent = manga.title || "Unknown Title";
         const popularityTagElement = document.getElementById("manga-popularityTag");
 
         // Remove existing badge classes
@@ -859,6 +860,7 @@
         } else {
           popularityTagElement.style.display = "none"; // Hide if no tag is available
         }
+console.log(manga.alternativeTitles?.join(", ") || "N/A");
 
         document.getElementById("manga-alternative-titles").textContent = manga.alternativeTitles?.join(", ") || "N/A";
         document.getElementById("manga-author").textContent = manga.authors?.join(", ") || "N/A";
